# debugpath

./: .env.example  .gitignore  AGENTS.md  BUILD.md  Caddyfile  Cargo.toml  README.md  biome.json  bunfig.toml  compose.yaml  justfile  package.json  tsconfig.base.json
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: auth.ts  index.ts
apps/api/test/: health.test.ts
apps/web/: .env.example  package.json  tsconfig.json
cases/corrupt-uploads/: brief.md  case.toml  commands.toml  logs.ndjson  metrics.toml  schema.sql  scoring.toml  traces.json
cases/corrupt-uploads/diffs/: chunk-ordering.diff
cases/corrupt-uploads/fixtures/: diff-chunk-ordering.txt  logs-upload-assembler.txt  metrics-upload-assembler.txt  purge-upload-bucket.txt  runbook-chunk-assembly.txt  sql-upload-chunks.txt
cases/corrupt-uploads/rows/: upload_chunks.csv
cases/corrupt-uploads/runbooks/: chunk-assembly.md
cases/green-ci-bad-prod/: brief.md  case.toml  commands.toml  logs.ndjson  metrics.toml  schema.sql  scoring.toml  traces.json
cases/green-ci-bad-prod/diffs/: health-path.diff
cases/green-ci-bad-prod/fixtures/: diff-health-path.txt  disable-health-checks.txt  logs-edge.txt  metrics-edge.txt  runbook-deploy-health.txt  sql-deploys.txt
cases/green-ci-bad-prod/rows/: deploys.csv
cases/green-ci-bad-prod/runbooks/: deploy-health.md
cases/memory-tide/: brief.md  case.toml  commands.toml  logs.ndjson  metrics.toml  schema.sql  scoring.toml  traces.json
cases/memory-tide/rows/: uploads.csv
cases/pinned-postgres/: brief.md  case.toml  commands.toml  logs.ndjson  metrics.toml  schema.sql  scoring.toml  traces.json
cases/slow-checkout/: brief.md  case.toml  commands.toml  logs.ndjson  metrics.toml  schema.sql  scoring.toml  traces.json
crates/debugpath-content/: Cargo.toml
crates/debugpath-db/: Cargo.toml
crates/debugpath-db/migrations/: 0001_initial.sql
crates/debugpath-db/src/: lib.rs
crates/debugpath-engine/: Cargo.toml
crates/debugpath-site/: Cargo.toml
crates/debugpath-site/src/: lib.rs  main.rs
crates/debugpath-ssh/: Cargo.toml
crates/debugpath-ssh/src/: lib.rs  main.rs
crates/debugpath-tui/: Cargo.toml
crates/debugpath-worker/: Cargo.toml
db/migrations/: 0001_initial_schema.sql  0002_auth_sessions_and_audit.sql
db/scripts/: migrate.ts  seed.ts
deploy/: debugpath.env.example
deploy/caddy/: debugpath.caddy
deploy/systemd/: debugpath-site.service  debugpath-ssh.service
docs/: case-authoring.md  deployment-runbook.md  local-development.md  postgres-backup-restore.md
ops/scripts/: dev.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+45 files in other folders)
