[workspace]
members = [
    "crates/debugpath-content",
    "crates/debugpath-db",
    "crates/debugpath-engine",
    "crates/debugpath-site",
    "crates/debugpath-ssh",
    "crates/debugpath-tui",
    "crates/debugpath-worker",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dunamismax/debugpath"

[workspace.dependencies]
debugpath-content = { path = "crates/debugpath-content" }
debugpath-engine = { path = "crates/debugpath-engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
