[package]
name = "debugpath-site"
version = "0.1.0"
edition = "2024"

[dependencies]
debugpath-content = { workspace = true }
debugpath-engine = { workspace = true }
axum = "0.8.7"
leptos = { version = "0.8.14", features = ["ssr"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
