[package]
name = "debugpath-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
debugpath-content = { workspace = true }
debugpath-engine = { workspace = true }
debugpath-tui = { path = "../debugpath-tui" }
rand = "0.10.1"
russh = "0.60.3"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
